@@ -26,3 +26,6 @@ tcl.suo
 *.lib
 *.pdb
 *.ilk
+*.pch
+versions.vc
+vercl.x
