@@ -1,3 +1,8 @@
+2010-03-12  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/makefile.vc         Fix [Bug 2967340]: Static build failure
+	* win/.cvsignore
+
 2010-03-10  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tclTest.c       Remove unnecessary '&' decoration for function
